--- a/vol_change_rw.yaml
+++ b/vol_change_rw.yaml
@@ -4,13 +4,22 @@
   gather_facts: no
   connection: local
   tasks:
-  - name: Create FlexVol
+  - name: Change RW
     na_ontap_volume:
       state: present
       name: "{{ vol_name }}"
       vserver: "{{ vserver }}"
       type: RW 
-      junction_path: "/{{ vol_name }}"
       hostname: "{{ hostname }}"
       username: "{{ username }}"
       password: "{{ password }}"
+
+  - name: junction_path
+    na_ontap_volume:
+      state: present
+      name: "{{ vol_name }}"
+      vserver: "{{ vserver }}"
+      junction_path: "/{{ vol_name }}"
+      hostname: "{{ hostname }}"
+      username: "{{ username }}"
+      password: "{{ password }}"   
