--- a/vol_change_rw.yaml
+++ b/vol_change_rw.yaml
@@ -10,16 +10,7 @@
       name: "{{ vol_name }}"
       vserver: "{{ vserver }}"
       type: RW 
+      junction_path: /"{{ vol_name }}"
       hostname: "{{ hostname }}"
       username: "{{ username }}"
       password: "{{ password }}"
-
-  - name: junction_path
-    na_ontap_volume:
-      state: present
-      name: "{{ vol_name }}"
-      vserver: "{{ vserver }}"
-      junction_path: "/{{ vol_name }}"
-      hostname: "{{ hostname }}"
-      username: "{{ username }}"
-      password: "{{ password }}"   
