--- a/vol_change_rw.yaml
+++ b/vol_change_rw.yaml
@@ -18,4 +18,4 @@
   gather_facts: no
   tasks:
     - name: Set Junction Path
-      raw: volume mount -vserver svm_CVO -volume yj_ansi01_copy -junction-path /yj_ansi01_copy
+      raw: volume mount -vserver "{{ vserver }}" -volume "{{ vol_name }}" -junction-path "/{{ vol_name }}"
