--- a/vol_change_rw.yaml
+++ b/vol_change_rw.yaml
@@ -6,6 +6,7 @@
   tasks:
   - name: Change RW
     na_ontap_volume:
+      state: present 
       name: "{{ vol_name }}"
       vserver: "{{ vserver }}"
       policy: default 
