--- a/2-deploy-apache.yml
+++ b/2-deploy-apache.yml
@@ -1,6 +1,6 @@
 ---
 - name: This sets up an httpd webserver
-  hosts: us-east-1c
+  hosts: tag_Env_Demo
   become: yes
   tasks:
   - name: Install the httpd rpm
