--- a/cluster_peering.yaml
+++ b/cluster_peering.yaml
@@ -7,6 +7,7 @@
     password: "{{ password }}"
     dest_hostname: "{{ dest_hostname }}"
     source_cluster_name: "{{ source_cluster_name }}"
+    dest_cluster_name: "{{ dest_cluster_name }}"
     source_intercluster_lif: "{{ source_intercluster_lif }}"
     dest_intercluster_lif: "{{ dest_intercluster_lif }}"
   name: cluster peering
@@ -21,4 +22,5 @@
       username: "{{ username }}"
       password: "{{ password }}"
       source_cluster_name: "{{ source_cluster_name }}" 
+      dest_cluster_name: "{{ dest_cluster_name }}"
       dest_hostname: "{{ dest_hostname }}"
