--- a/vol_change_rw.yaml
+++ b/vol_change_rw.yaml
@@ -14,7 +14,7 @@
       username: "{{ username }}"
       password: "{{ password }}"
 
-- hosts: netapp
+- hosts: ontap
   gather_facts: no
   tasks:
     - name: Set Junction Path
