--- a/vol_change_rw.yaml
+++ b/vol_change_rw.yaml
@@ -10,6 +10,7 @@
       name: "{{ vol_name }}"
       vserver: "{{ vserver }}"
       type: RW 
+      policy: export-svm_CVO-test
       hostname: "{{ hostname }}"
       username: "{{ username }}"
       password: "{{ password }}"
