--- a/remove_snapmirror.yaml
+++ b/remove_snapmirror.yaml
@@ -10,6 +10,7 @@
       destination_vserver: "{{ destination_vserver }}"
       source_hostname: "{{ source_hostname }}"
       destination_path: svm_CVO:ansible_target
+      source_path: yj_ansible:yj_ansi04
       source_volume: "{{ source_volume }}"
       destination_volume: "{{ destination_volume }}"
       hostname: "{{ hostname }}"
