--- a/remove_snapmirror.yaml
+++ b/remove_snapmirror.yaml
@@ -8,6 +8,7 @@
       state: absent 
       source_hostname: "{{ source_hostname }}"
       destination_path: svm_CVO:ansible_target
+      source_path: yj_ansible:yj_ansi04
       hostname: "{{ hostname }}"
       username: "{{ username }}"
       password: "{{ password }}"
