--- a/remove_snapmirror_2.yaml
+++ b/remove_snapmirror_2.yaml
@@ -1,14 +1,6 @@
 ---
 - hosts: localhost
   gather_facts: false 
-  vars:
-    hostname: "{{ hostname }}"
-    username: "{{ username }}"
-    password: "{{ password }}"
-    source_vserver:  "{{ source_vserver }}"
-    destination_vserver: "{{ destination_vserver }}"
-    source_volume: "{{ source_volume }}"
-    destination_volume: "{{ destination_volume }}"
   name: ontap snapmirror 
   tasks: 
   - name: Remove SnapMirror
@@ -16,8 +8,8 @@
       state: absent 
       source_vserver:  "{{ source_vserver }}"
       destination_vserver: "{{ destination_vserver }}"
-      source_hostname: 49.254.105.140 
-      destination_path: svm_CVO:yj_ansible
+      source_hostname: "{{ source_hostname }}" 
+      destination_path: svm_CVO:ansible_target
       source_volume: "{{ source_volume }}"
       destination_volume: "{{ destination_volume }}"
       hostname: "{{ hostname }}"
