--- a/Deploy_VMware_VM.yml
+++ b/Deploy_VMware_VM.yml
@@ -4,7 +4,7 @@
   connection: local
 
 # get date
-- set_fact: creationdate="{{lookup('pipe','date "+%Y/%m/%d %H:%M"')}}"
+#- set_fact: creationdate="{{lookup('pipe','date "+%Y/%m/%d %H:%M"')}}"
 
 # Create a VM from a template
 - name: create the VM
