--- a/Deploy_VMware_VM.yml
+++ b/Deploy_VMware_VM.yml
@@ -19,7 +19,7 @@
     name: '{{ inventory_hostname }}'
     state: poweredon
     guest_id: '{{ guest_id }}'
-    annotation: "{{ notes }} - {{ creationdate }}"
+#   annotation: "{{ notes }} - {{ creationdate }}"
     disk:
     - size_gb: 40
       type: thin
@@ -43,15 +43,15 @@
       hostname: '{{ inventory_hostname }}'
     template: '{{ guest_template }}'
     wait_for_ip_address: yes
-#  delegate_to: localhost
+    delegate_to: localhost
 
-- name: add to ansible hosts file
-  lineinfile:
-    dest: /etc/ansible/hosts
-    insertafter: '^\[{{ ansible_host_group }}\]'
-    line: '{{ item }}'
-  with_items: '{{play_hosts}}'
-  run_once: true
+#- name: add to ansible hosts file
+#  lineinfile:
+#    dest: /etc/ansible/hosts
+#    insertafter: '^\[{{ ansible_host_group }}\]'
+#    line: '{{ item }}'
+#  with_items: '{{play_hosts}}'
+#  run_once: true
 #  delegate_to: localhost
 
 #- name: add to /etc/hosts file
