--- a/Deploy_VMware_VM_another.yml
+++ b/Deploy_VMware_VM_another.yml
@@ -2,13 +2,7 @@
 - hosts: all
   gather_facts: false
   connection: local
-  vars_prompt:
-    - name: "vsphere_password"
-      prompt: "vSphere Password"
-    - name: "notes"
-      prompt: "VM notes"
-      private: no
-      default: "Deployed with ansible"
+ 
   tasks:
   # get date
   - set_fact: creationdate="{{lookup('pipe','date "+%Y/%m/%d %H:%M"')}}"
@@ -19,36 +13,37 @@
       username: '{{ vsphere_user }}'
       password: '{{ vsphere_password }}'
       validate_certs: no
-      esxi_hostname: esxi_server
-      datacenter: 'ZWINDLER'
-      folder: A_DEPLOYER
+      esxi_hostname: '{{ esxi_hostname }}' 
+      datacenter: '{{ vsphere_datacenter }}'
+      folder: {{ vsphere_folder  }}'
       name: '{{ inventory_hostname }}'
       state: poweredon
-      guest_id: rhel7_64Guest
+      guest_id: '{{ guest_id }}'
       annotation: "{{ notes }} - {{ creationdate }}"
       disk:
-      - size_gb: 150
+      - size_gb: 40
         type: thin
         datastore: '{{ vsphere_datastore }}'
       networks:
-      - name: server_network
-        ip: '{{ custom_ip }}'
-        netmask: 255.255.252.0
-        gateway: 192.168.100.1
+      - name: '{{ guest_network }}'
+        ip: '{{ guest_custom_ip }}'
+        netmask: 255.255.255.0
+        gateway: 49.254.105.1
         dns_servers:
-        - 192.168.100.10
-        - 192.168.101.10
+        - 8.8.8.8
+        - 168.126.63.1
       hardware:
-        memory_mb: 4096
+        memory_mb: 2048
         num_cpus: 2
       customization:
         dns_servers:
-        - 192.168.100.10
-        - 192.168.101.10
-        domain : zwindler.fr
+        - 8.8.8.8
+        - 168.126.63.1
+#        domain : zwindler.fr
         hostname: '{{ inventory_hostname }}'
-      template: tmpl-rhel-7-3-app
+      template: '{{  guest_template  }}'
       wait_for_ip_address: yes
+      
   - name: add to ansible hosts file
     lineinfile:
       dest: /etc/ansible/hosts
